--- a/MySTD/MySTD.vcxproj.filters
+++ b/MySTD/MySTD.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClInclude Include="ThreadPool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MyVector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Pool_Alloc.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="_M_Tuple.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Pool_Alloc.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
